maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: value North is not a member of object plm.universe.Direction
  while (!estSurBiscuit()) { while (!estFaceMur){setDirection(Direction.North);avance()};keepHandOnSideWall}; prendBiscuit()
                                                                        ^