maze.lessons.maze.island.IslandMaze.scala.code
def keepHandOnSideWall = {gauche(); if (!estFaceMur) {avance()} else {while(estFaceMur()) {droite};avance()} }

override def run() { 
  
  
  while (!estSurBiscuit()) { while (!estFaceMur){setDirection(Direction.North);avance()};keepHandOnSideWall}; prendBiscuit()
}